Incorporando Formik y semantic-ui

--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -1,8 +1,7 @@
 $nspeed: 300ms;
 
 // Fonts
-$font-main: "Roboto",
-sans-serif;
+$font-main: "Roboto",sans-serif;
 // Contenedor
 $width-container: unquote("min(100% - 36px, 960px - 64px)");
 $width-container-solapa: unquote("min(100% - 36px, 960px)");
