--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -1,5 +1,6 @@
 @use 'abstracts' as *;
 @use 'cardAsesor';
+@import 'pasarela-med-mod-payment.scss';
 @import 'bulma/css/bulma.css';
 
 // Fix bug grilla con input radio
@@ -103,10 +104,12 @@ h2.title {
 .gridCuartos {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-rows: 1fr 3rem 1fr;
   column-gap: 0.75rem;
+  
   &-item {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 0.5rem;
     border-radius: 6px;
 
@@ -123,20 +126,33 @@ h2.title {
     }
 
     input {
-      position: absolute;
+     position: absolute;
+     text-align: center;
       opacity: 0.001;
       z-index: 3;
-      left: 0px;
-      top: 0px;
+     /*  left: 0px;
+      top: 0px; */
       width: 100%;
       height: 100%;
       cursor: pointer;
     }
+   
+    h4{
+      text-align: center;
+    }
   }
-  .half {
-    grid-column: span 2;
+
+  .is-divider.doble{
+    grid-column: span 3;
+    grid-row: 2 / 3;
+  }
+
+  .half{
     justify-content: center;
+
+   
   }
+
 }
 .stepControls,
 .edit_stepControls {
@@ -228,6 +244,11 @@ h2.title {
       height: 5rem;
     }
     .field {
+
+      & .half:not(:last-child){
+        margin: 0;
+      }
+
       input {
         border-radius: 0;
         border-width: 0 0 3px 0;
