--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -1,14 +1,14 @@
 .grid-med_mod_payment {
   display: grid;
-    grid-template-areas: 'tarjeta link'  'hr hr' 'tradicional suscripcion';
+    grid-template-areas: 'tarjeta link'  'hr hr' 'tradicional suscripcion' 'controls controls';
     column-gap: 1rem;
 
-  .field.half:nth-child(1) {
+  button:nth-child(1) {
    grid-area: tarjeta;
    margin-bottom: 0;
   }
 
-  .field.half:nth-child(2) {
+  button:nth-child(2) {
     grid-area: link;
    margin-bottom: 0;
 
@@ -18,12 +18,20 @@
     grid-area: hr;
   }
 
-  .field.half:nth-child(4) {
+  button:nth-child(4) {
     grid-area: tradicional;
   }
 
-  .field.half:nth-child(5) {
+  button:nth-child(5) {
     grid-area: suscripcion;
+
+  }
+
+  .controls{
+    grid-area: controls;
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 10rem;
 
   }
 }
