--- a/src/scss/pasarela-client-form.scss
+++ b/src/scss/pasarela-client-form.scss
@@ -3,6 +3,33 @@
       grid-template-areas: 'suscri_type suscri_type' 'contract email' 'contract_amount quota' 'pay_amount pay_amount' 'controls controls';
       column-gap: 1rem;
   
+    .suscri_type{
+      grid-area: suscri_type;
+     
+      padding: 0.7rem;
+      margin-bottom: 1rem;
+      background: #FFFFFF;
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);
+      border-radius: 10px;
+
+      *{
+        margin: 0;
+        padding: 0;
+      }
+
+      .field{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+       
+        p.help.is-danger{
+          display: block;
+        }
+      }
+
+    }
+
     .field:nth-child(1) {
      grid-area: contract;
      margin-bottom: 0;
@@ -31,7 +58,7 @@
       grid-area: controls;
       display: flex;
       gap: 0.5rem;
-      margin-top: 10rem;
+      margin-top: 3rem;
   
     }
   }
