--- a/src/scss/pasarela-payment_method.scss
+++ b/src/scss/pasarela-payment_method.scss
@@ -1,11 +1,9 @@
-.grid-payment_method{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-    grid-template-rows: 1fr 3rem 1fr;
-    
-    //grid-template-areas: "option""control";
+.grid-payment_method {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  grid-template-rows: 1fr 3rem 1fr;
   gap: 0.75rem;
-  
+
   &-item {
     display: flex;
     justify-content: center;
@@ -14,52 +12,52 @@
     height: 5rem;
 
     &.tall {
-        display: flex;
-        justify-content: center;
-      }
-    
-    img{
+      display: flex;
+      justify-content: center;
+    }
+
+    img {
       margin-right: 0.5rem;
     }
 
     span {
-     position: relative;
+      position: relative;
       z-index: 2;
       gap: 0.5rem;
     }
 
     input {
-     position: absolute;
-     text-align: center;
+      position: absolute;
+      text-align: center;
       opacity: 0.001;
       z-index: 3;
-     /*  left: 0px;
+      /*  left: 0px;
       top: 0px; */
       width: 100%;
       height: 100%;
       cursor: pointer;
 
-      &[type='radio']{
-        visibility: hidden;
-      }
     }
-   
+
+    &.button.is-link.is-outlined:focus{
+      background-color: #eff1fa !important;
+    }
   }
-  
-  .controls{
+
+  .controls {
     grid-column: 1 / 4;
     grid-row: 7 / 8;
 
     display: grid;
-    grid-template-columns: repeat(2, minmax(10rem,1fr));
+    grid-template-columns: repeat(2, minmax(10rem, 1fr));
     gap: 1rem;
   }
-  .is-divider.doble{
+  .is-divider.doble {
     grid-column: span 3;
     grid-row: 2 / 3;
   }
 
-  .half{
+  .half {
     justify-content: center;
   }
 }
