--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -35,3 +35,27 @@
 
   }
 }
+
+.grid-med_mod_payment-mp {
+  display: grid;
+    grid-template-areas: 'search search'  'tk tk' 'controls controls';
+    column-gap: 1rem;
+
+  .field:nth-child(1) {
+   grid-area: search;
+   margin-bottom: 0;
+  }
+
+  #finalResume {
+    grid-area: tk;
+   margin-bottom: 0;
+  }
+
+  .controls{
+    grid-area: controls;
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 10rem;
+
+  }
+}
