--- a/src/scss/pasarela-client-form.scss
+++ b/src/scss/pasarela-client-form.scss
@@ -62,4 +62,20 @@
   
     }
   }
+
+  div#grid-client_data{
+    display: grid;
+    grid-template-areas: 'resume resume' 'controls controls';
+
+    #finalResume{
+      grid-area: resume;
+    }
+
+    .controls{
+      grid-area: controls;
+      display: flex;
+      gap: 0.5rem;
+      margin-top: 3rem;
+    }
+  }
   
