--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -38,16 +38,11 @@
 
 .grid-med_mod_payment-mp {
   display: grid;
-    grid-template-areas: 'search search' 'mod mod' 'tk tk' 'controls controls';
+    grid-template-areas: 'search search' 'mod mod' 'controls controls';
     column-gap: 1rem;
 
   .field:nth-child(1) {
    grid-area: search;
-   margin-bottom: 0;
-  }
-
-  #finalResume {
-    grid-area: tk;
    margin-bottom: 0;
   }
 
