--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -38,12 +38,23 @@
 
 .grid-med_mod_payment-mp {
   display: grid;
-    grid-template-areas: 'search search' 'mod mod' 'controls controls';
+    grid-template-areas: 'search search' 'mod mod' 'quotes quotes' 'notification notification' 'controls controls';
     column-gap: 1rem;
 
   .field:nth-child(1) {
    grid-area: search;
-   margin-bottom: 0;
+   margin-bottom: 1.5rem;
+  }
+
+  .block.field_info{
+    grid-area: notification;
+    align-self: center;
+    margin: 10px auto ;
+  }
+
+  .select.is-info{
+    grid-area: quotes;
+    margin: 10px auto;
   }
 
   .controls{
