--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -427,3 +427,10 @@ h2.title {
   border-bottom: 2px dashed #f5f5f5;
   margin: 0.5rem 0 0.75rem;
 }
+
+.controls{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  margin-top: 2.5rem;
+}
