--- a/src/scss/pasarela-country.scss
+++ b/src/scss/pasarela-country.scss
@@ -1,9 +1,11 @@
 .grid-country {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
-  grid-template-rows: 1fr 3rem 1fr;
-
   gap: 0.75rem;
+
+  .field {
+    margin: 0;
+  }
 
   &-item {
     display: flex;
@@ -27,7 +29,7 @@
       opacity: 0.001;
       z-index: 9999;
       left: 0px;
-      top: 0px; 
+      top: 0px;
       width: 100%;
       height: 100%;
       cursor: pointer;
@@ -36,20 +38,13 @@
         visibility: hidden;
       }
     }
-
-    &.button.is-link.is-outlined:focus {
+    &.active {
       background-color: #eff1fa !important;
+      border-color: #485fc7;
+      color: #485fc7;
     }
   }
 
-  .controls {
-    grid-column: 1 / 4;
-    grid-row: 7 / 8;
-
-    display: grid;
-    grid-template-columns: repeat(2, minmax(10rem, 1fr));
-    gap: 1rem;
-  }
   .is-divider.doble {
     grid-column: span 3;
     grid-row: 2 / 3;
