--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -42,9 +42,23 @@
     margin: 10px auto;
   }
 
-  .select.is-info {
+  .select.is-link {
     grid-area: quotes;
+    width: 100%;
+    height: 100%;
     margin: 10px auto;
+    select{
+      width: 100%;
+    }
+  }
+  .select.is-danger {
+    grid-area: quotes;
+    width: 100%;
+    height: 100%;
+    margin: 10px auto;
+    select{
+      width: 100%;
+    }
   }
   .grid-payment_method-item {
     height: unset;
@@ -53,6 +67,12 @@
       background-color: #eff1fa !important;
       border-color: #485fc7;
       color: #485fc7;
+    }
+
+    &.error {
+      background-color: #feecf0 !important;
+      border-color: hsl(348deg, 86%, 61%);
+      color: hsl(348deg, 86%, 61%);
     }
   }
 }
