--- a/src/scss/pasarela-payment_method.scss
+++ b/src/scss/pasarela-payment_method.scss
@@ -46,6 +46,12 @@
       border-color: #485fc7;
       color: #485fc7;
     }
+
+    &.error {
+      background-color: #feecf0 !important;
+      border-color: hsl(348deg, 86%, 61%);
+      color: hsl(348deg, 86%, 61%);
+    }
   }
 
   .controls {
