Stripe actualiza contrato y MP tiene suscri

--- a/src/scss/pasarela-generate_payment.scss
+++ b/src/scss/pasarela-generate_payment.scss
@@ -28,3 +28,16 @@
         max-width: 300px;
     }
 }
+
+#grid-payment_mp{
+    display: grid;
+    grid-template-areas: "description description" 
+                        "buttonLink buttonLink";
+                        gap: 1rem;
+    h3{
+        grid-area: description;
+    }
+    a{
+        grid-area: buttonLink;
+    }
+}
