--- a/src/scss/pasarela-med-mod-payment.scss
+++ b/src/scss/pasarela-med-mod-payment.scss
@@ -28,10 +28,10 @@
 
 .grid-med_mod_payment-mp {
   display: grid;
-  grid-template-areas: 'mod mod' 'search search' 'quotes quotes' 'notification notification' 'controls controls';
+  grid-template-areas: 'search search' 'mod mod' 'quotes quotes' 'notification notification' 'controls controls';
   column-gap: 1rem;
 
-  .field:nth-child(3) {
+  .field:nth-child(1) {
     grid-area: search;
     margin-bottom: 1.5rem;
   }
@@ -42,23 +42,9 @@
     margin: 10px auto;
   }
 
-  .select.is-link {
+  .select.is-info {
     grid-area: quotes;
-    width: 100%;
-    height: 100%;
     margin: 10px auto;
-    select{
-      width: 100%;
-    }
-  }
-  .select.is-danger {
-    grid-area: quotes;
-    width: 100%;
-    height: 100%;
-    margin: 10px auto;
-    select{
-      width: 100%;
-    }
   }
   .grid-payment_method-item {
     height: unset;
@@ -67,12 +53,6 @@
       background-color: #eff1fa !important;
       border-color: #485fc7;
       color: #485fc7;
-    }
-
-    &.error {
-      background-color: #feecf0 !important;
-      border-color: hsl(348deg, 86%, 61%);
-      color: hsl(348deg, 86%, 61%);
     }
   }
 }
