--- a/src/scss/pasarela-generate_payment.scss
+++ b/src/scss/pasarela-generate_payment.scss
@@ -1,10 +1,26 @@
 #grid-payment_stripe{
     display: grid;
-    grid-template-areas: 'card card card' 'notify notify notify';
+    grid-template-areas: 'fullName fullName phone' 'address address dni' 'card card card' 'notify notify notify';
     gap: 1rem;
     align-items: center;
     justify-content: center;
     width: 100%;
+
+    .field:nth-child(1){
+        grid-area: fullName;
+    }
+
+    .field:nth-child(2){
+        grid-area: phone;
+    }
+
+    .field:nth-child(3){
+        grid-area: address;
+    }
+
+    .field:nth-child(4){
+        grid-area: dni;
+    }
 
     .checkout_stripe{
         grid-area: card;
@@ -12,6 +28,11 @@
         #card_element{
             margin: 10px 0;
             width: 700px;
+            background-color: hsl(0deg, 0%, 100%);
+            border-radius: 4px;
+            color: hsl(0deg, 0%, 21%);
+            border: 1px solid hsl(0deg, 0%, 86%);
+            padding: 10px;
         }
 
         #serverNotify{
