Estilos de la aplicacion

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -5,7 +5,7 @@
 @use 'pasarela-client-form.scss';
 @use 'pasarela-med-mod-payment.scss';
 @use 'pasarela-payment_method.scss';
-@use 'ventapresencial-lead.scss';
+@use 'ventaPresencial-create_lead.scss';
 @use './components/tags';
 
 // Fix bug grilla con input radio
