Step Contacto con estilos

--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -6,6 +6,7 @@
 @use 'pasarela-med-mod-payment.scss';
 @use 'pasarela-payment_method.scss';
 @use 'ventaPresencial-create_lead.scss';
+@use 'ventaPresencial-conversion_contact.scss';
 @use './components/tags';
 
 // Fix bug grilla con input radio
