--- a/src/scss/pasarela-de-cobros.scss
+++ b/src/scss/pasarela-de-cobros.scss
@@ -1,5 +1,6 @@
 @use '../../node_modules/bulma/bulma.sass';
 @use 'abstracts' as *;
+@use './components/buttons';
 @use 'cardAsesor';
 @use 'pasarela-country.scss';
 @use 'pasarela-client-form.scss';
@@ -18,12 +19,27 @@
 :root {
   --animate-delay: 0.5s;
 }
+
 $success: #32bea6;
 $accent: #00b6de;
 $danger: rgb(236, 39, 39);
 $texto-light: #808fa6;
-$buttonBg: #ff266e;
 
+// DISPLAY MOBILE/DESKTOP
+.d-mobile {
+  display: none;
+}
+@media screen and (max-width: 766px) {
+  .d-desktop {
+    display: none;
+  }
+  .d-mobile {
+    display: unset;
+  }
+}
+.rotate-90 {
+  rotate: -90deg;
+}
 button.button > .ui.radio {
   input[type='radio'] {
     visibility: hidden;
@@ -61,24 +77,6 @@ header.container {
 .columns {
   margin: 0;
 }
-.button {
-  //height: unset;
-  border-radius: 6px;
-
-  &.is-primary {
-    background-color: $buttonBg;
-
-    &[disabled],
-    fieldset[disabled] {
-      background-color: $buttonBg;
-      border-color: $buttonBg;
-    }
-
-    &:hover {
-      background-color: darken($buttonBg, 15%);
-    }
-  }
-}
 
 .invisible {
   display: none !important;
@@ -108,6 +106,7 @@ h2.title {
   padding-bottom: 3rem;
   position: relative;
   z-index: 2;
+  min-height: 100vh;
 
   form {
     display: flex;
@@ -120,6 +119,15 @@ h2.title {
       flex-grow: 1;
       align-content: flex-start;
     }
+    .title {
+      svg {
+        display: none;
+      }
+    }
+  }
+  &-overlay,
+  .searchcourses-overlay {
+    display: none;
   }
 
   &-cont {
@@ -360,6 +368,8 @@ h2.title {
       &-list {
         display: flex;
         flex-direction: column;
+        max-height: 196px;
+        overflow-y: auto;
       }
       &-selected {
         padding: 1rem 1.5rem;
@@ -549,20 +559,25 @@ h2.title {
 }
 
 .controls {
+  margin-top: 2.5rem;
   display: grid;
   grid-template-areas: 'back save next';
+  grid-auto-columns: 1fr;
   gap: 1rem;
-  margin-top: 2.5rem;
 
-  button:first-child {
+  .prev-button {
     grid-area: back;
   }
 
-  button:nth-child(2) {
+  .save-button {
     grid-area: save;
+
+    img {
+      display: none;
+    }
   }
 
-  button:last-child {
+  .next-button {
     grid-area: next;
   }
 
@@ -577,10 +592,15 @@ h2.title {
   display: grid;
   grid-template-columns: min(100%, 800px);
   flex-flow: column nowrap;
+  gap: 0.5rem;
+  .course {
+    margin-bottom: 0;
+  }
 }
 
 .course {
-  padding: 0.75rem 1.625rem 1.625rem 1.5rem;
+  margin-bottom: 0;
+  padding: 0.75rem 1rem 0.75rem 1.25rem;
   width: 100%;
   display: flex;
   flex-flow: row wrap;
@@ -603,19 +623,19 @@ h2.title {
     display: flex;
     flex-flow: column nowrap;
     flex-grow: 1;
-    gap: 0.75rem;
+    gap: 0.5rem;
 
     &-header {
       display: flex;
       flex-flow: row wrap;
       align-items: center;
-      gap: 0.75rem;
+      gap: 0.5rem;
     }
   }
   &-specialty,
   &-hours {
     text-transform: uppercase;
-    @include font(0.75rem, 500, 1.5, color(texto, '-light'));
+    @include font(0.75rem, 500, 1, color(texto, '-light'));
 
     svg {
       margin-right: 2px;
@@ -625,7 +645,7 @@ h2.title {
   }
   &-name {
     h3 {
-      @include font(1.375rem, 700, 1.2, color(medicina, '-dark'));
+      @include font(1.125rem, 700, 1.2, color(medicina, '-dark'));
     }
   }
   &-price {
@@ -634,7 +654,375 @@ h2.title {
     justify-content: flex-end;
 
     h3 {
-      @include font(2rem, 700, 1, color(medicina, '-dark'));
+      @include font(1.75rem, 700, 1, color(medicina, '-dark'));
     }
+  }
+}
+pre {
+  display: none;
+}
+@media screen and (min-width: 767px) {
+  .pasarela {
+    overflow: unset;
+  }
+}
+
+@media screen and (max-width: 766px) {
+  header.container {
+    padding-bottom: 0px !important;
+    padding-top: 28px !important;
+    z-index: 5;
+
+    .navbar-brand {
+      display: grid;
+      grid-template-columns: 72px 100%;
+      justify-content: start;
+      gap: 24px;
+
+      .navbar-item {
+        padding: 0;
+        width: 150px;
+      }
+    }
+    .navbar-burger {
+      width: 100%;
+      span {
+        width: 24px;
+        left: calc(50% - 12px);
+      }
+      &:hover {
+        background-color: transparent;
+      }
+    }
+  }
+  .pasarela {
+    padding-top: calc(80px + 20px);
+    padding-bottom: 0 !important;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 72px auto;
+    overflow-y: scroll;
+    .notification {
+      margin: 1rem;
+      padding: 1rem;
+      font-size: 14px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 4px;
+    }
+    .label {
+      margin-bottom: 2px;
+      color: #292d32;
+      text-transform: uppercase;
+      font-weight: 500;
+      font-size: 0.75rem;
+    }
+    form {
+      order: 2;
+      height: 100%;
+      grid-template-columns: 1fr;
+      grid-template-rows: max-content auto max-content;
+      padding: 0 24px 24px;
+      & > [class*='grid'] {
+        overflow-y: scroll;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-bottom: 12px;
+      }
+      /* & > *:nth-child(2) {
+        overflow-y: scroll;
+        grid-template-columns: 1fr;
+        width: 100%;
+        margin-bottom: 12px;
+      } */
+      .grid-med_mod_payment-mp {
+        overflow: initial;
+      }
+      .grid-country-item {
+        justify-content: start;
+      }
+      .field {
+        margin: 0;
+        width: 100%;
+      }
+      .grid-payment_method {
+        &-item {
+          &.tall {
+            height: 60px;
+          }
+          img {
+            height: 85%;
+          }
+        }
+      }
+      .grid-med_mod_payment-mp {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+          'mod'
+          'mod1'
+          'search'
+          'quotes'
+          'notification'
+          'controls';
+        gap: 12px;
+
+        .field:nth-child(3) {
+          margin-bottom: 0px;
+        }
+      }
+
+      #mod_suscrip_field {
+        grid-area: mod1;
+      }
+
+      #mod_traditional_field {
+        grid-area: mod;
+      }
+      #grid-client_data,
+      #grid-payment_mp {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-top: 0.75rem;
+      }
+      #finalResume {
+        padding: 0;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        border-radius: unset;
+        filter: none;
+        .finalResume-confirmation {
+          display: flex;
+          flex-direction: column;
+          gap: 0.75rem;
+          padding-block: 1rem;
+          .field label {
+            height: max-content;
+            padding: 0.75rem;
+          }
+        }
+        .finalResume-item {
+          margin: 0;
+          overflow-wrap: anywhere;
+
+          h4 {
+            font-size: 1rem;
+          }
+        }
+        h2 {
+          font-size: 1.125rem !important;
+        }
+        .datos-cliente,
+        .datos-tarjeta {
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+          margin: 0;
+
+          &-header {
+            flex-direction: column;
+            gap: 12px;
+          }
+        }
+        #emailCliente_resume {
+          flex-direction: column;
+          h4 {
+            margin: 0;
+          }
+        }
+        #numeroContrato_resume h4,
+        #montoTotalContrato_resume h4 {
+          font-size: 18px;
+        }
+      }
+    }
+  }
+
+  .side {
+    padding-left: 1.5rem !important;
+    padding: 0;
+    min-width: 4.5rem;
+
+    &-body {
+      gap: 0.75rem;
+    }
+
+    & > .title {
+      display: none;
+    }
+    &-item {
+      padding: 0;
+      min-height: 28.25px;
+
+      &.card {
+        border: none;
+        box-shadow: none;
+        background: transparent;
+        padding: 0;
+      }
+
+      &-info > *:not(.numstep) {
+        display: none !important;
+      }
+      button {
+        height: 1.75rem;
+        padding: 0 !important;
+
+        svg {
+          font-size: 1.5rem !important;
+        }
+      }
+      &.current,
+      &.completed {
+        .subtitle {
+          margin-bottom: 0;
+        }
+        .title {
+          margin-top: 0;
+        }
+      }
+      &.completed .button {
+        display: none;
+      }
+
+      &.selection ~ .side-item-courses {
+        display: none;
+      }
+    }
+  }
+
+  .pasarela-1 {
+    & .title {
+      margin-bottom: 12px;
+      font-size: 18px;
+      justify-content: space-between;
+      span {
+        display: none;
+      }
+    }
+  }
+  .course {
+    padding: 0.5rem 0.75rem;
+    justify-content: flex-start;
+    gap: 6px;
+    border: 1px solid transparent;
+
+    &.selected {
+      background-color: rgba(0, 182, 222, 0.03);
+      border: 1px solid rgba(0, 182, 222, 1);
+    }
+
+    &-selection {
+      display: none;
+    }
+    &-content {
+      gap: 6px;
+      &-header {
+        flex-flow: row nowrap;
+        gap: 0.25rem;
+        & > * {
+          font-size: 0.5rem !important;
+        }
+      }
+    }
+    &-specialty {
+      text-overflow: ellipsis;
+      overflow-y: clip;
+      white-space: nowrap;
+      max-width: 14ch;
+    }
+    &-name {
+      h3 {
+        font-size: 0.75rem;
+      }
+    }
+    &-price {
+      h3 {
+        font-size: 1.125rem;
+      }
+    }
+  }
+  .searchbar-desktop {
+    display: none;
+  }
+
+  .searchcourses-overlay {
+    padding: 100px 1.5rem 1.5rem;
+    position: absolute;
+    inset: 0 0 0 4.5rem;
+    background-color: rgba(63, 108, 187, 0.8);
+    &.is-expanded {
+      display: block;
+    }
+  }
+  .controls {
+    margin-top: 0;
+    grid-template-areas: 'back next';
+    grid-template-columns: 1fr 1fr;
+    column-gap: 8px;
+    .next-button {
+      grid-area: next;
+    }
+    .save-button {
+      width: max-content;
+      padding: 0 3px;
+      position: fixed;
+      left: 1rem;
+      opacity: 1;
+      border-radius: 50%;
+      aspect-ratio: 1/1;
+      background-color: hsl(340deg, 100%, 57%);
+      &[disabled] {
+        opacity: 0.5;
+        background-color: hsl(340deg, 100%, 57%);
+      }
+
+      span {
+        display: none;
+      }
+      img {
+        display: block;
+        transform: scale(0.8);
+      }
+    }
+  }
+
+  .is-expanded {
+    .navbar-brand .navbar-item {
+      display: none;
+    }
+
+    & ~ * {
+      .pasarela {
+        grid-template-columns: min(80vw, 272px) auto;
+
+        &-1 {
+          position: relative;
+          width: max-content;
+        }
+
+        &-overlay {
+          transition: all 0.3s ease-in-out;
+          opacity: 1;
+          position: absolute;
+          display: block;
+          background-color: rgba(63, 108, 187, 0.8);
+          content: ' ';
+          inset: -125px 0;
+          z-index: 99;
+          backdrop-filter: blur(2px);
+        }
+      }
+
+      #background-side {
+        width: min(80vw, 272px);
+      }
+    }
+  }
+  .is-expanded ~ .pasarela {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
   }
 }
