--- a/src/scss/ventaPresencial-conversion_contact.scss
+++ b/src/scss/ventaPresencial-conversion_contact.scss
@@ -72,3 +72,15 @@
     }
   }
 }
+@media screen and (max-width: 766px) {
+  .grid-conversion_contact {
+    grid-template-areas: unset;
+    grid-template-columns: 1fr;
+    gap: 0.75rem;
+    & > .field {
+      &:nth-child(n) {
+        grid-area: unset;
+      }
+    }
+  }
+}
